tests/rosetta/out/Swift/bitmap-ppm-conversion-through-a-pipe.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:36Z
struct Pixel: Equatable {
    var R: Int
    var G: Int
    var B: Int
}
func pixelFromRgb(_ c: Int) -> Pixel {
    let r = (Int((c / 65536))) % 256
    let g = (Int((c / 256))) % 256
    let b = c % 256
    return Pixel(R: r, G: g, B: b)
}
func rgbFromPixel(_ p: inout Pixel) -> Int {
    return p.R * 65536 + p.G * 256 + p.B
}
struct Bitmap: Equatable {
    var cols: Int
    var rows: Int
    var px: [[Pixel]]
}
func NewBitmap(_ x: Int, _ y: Int) -> Bitmap {
    var data: [[Pixel]] = [Any]()
    var row = 0
    while row < y {
        var r: [Pixel] = [Any]()
        var col = 0
        while col < x {
            r = r + [Pixel(R: 0, G: 0, B: 0)]
            col = col + 1
        }
        data = data + [r]
        row = row + 1
    }
    return Bitmap(cols: x, rows: y, px: data)
}
func FillRgb(_ b: inout Bitmap, _ c: Int) {
    var y = 0
    let p = pixelFromRgb(c)
    while y < b.rows {
        var x = 0
        while x < b.cols {
            var px = b.px
            var row = px[y]
            row[x] = p
            px[y] = row
            b.px = px
            x = x + 1
        }
        y = y + 1
    }
}
func SetPxRgb(_ b: inout Bitmap, _ x: Int, _ y: Int, _ c: Int) -> Bool {
    if x < 0 || x >= b.cols || y < 0 || y >= b.rows {
        return false
    }
    var px = b.px
    var row = px[y]
    row[x] = pixelFromRgb(c)
    px[y] = row
    b.px = px
    return true
}
func nextRand(_ seed: Int) -> Int {
    return (seed * 1664525 + 1013904223) % 2147483648
}
func main() {
    var bm = NewBitmap(400, 300)
    FillRgb(&bm, 12615744)
    var seed = now()
    var i = 0
    while i < 2000 {
        seed = nextRand(seed)
        let x = seed % 400
        seed = nextRand(seed)
        let y = seed % 300
        SetPxRgb(&bm, x, y, 8405024)
        i = i + 1
    }
    var x = 0
    while x < 400 {
        var y = 240
        while y < 245 {
            SetPxRgb(&bm, x, y, 8405024)
            y = y + 1
        }
        y = 260
        while y < 265 {
            SetPxRgb(&bm, x, y, 8405024)
            y = y + 1
        }
        x = x + 1
    }
    var y = 0
    while y < 300 {
        var x = 80
        while x < 85 {
            SetPxRgb(&bm, x, y, 8405024)
            x = x + 1
        }
        x = 95
        while x < 100 {
            SetPxRgb(&bm, x, y, 8405024)
            x = x + 1
        }
        y = y + 1
    }
}
main()
